--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ flutter:
     - assets/fonts/
     - assets/images/
     - assets/images/background.jpg
+    - assets/images/logo/logo.png
+    - assets/images/logo/logo2.png
+    - assets/images/logo/logo3.png
+    - assets/images/logo/logo4.png
     - assets/icons/
 
   fonts:
