--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
-          webRenderer: canvaskit
+          webRenderer: html
           channel: stable
       - run: flutter pub get
       #- run: flutter test
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
-          baseHref: /registration-desk/
+          baseHref: /flutter_resume_pdf/
