--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,3 +19,4 @@ jobs:
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
           baseHref: /flutter_resume_pdf/
+          webRenderer: html
