--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,11 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.9.9 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
+
+language:
+  strict-inference: true
+  strict-raw-types: true
 
 dependencies:
   flutter:
@@ -28,17 +32,17 @@ dependencies:
   flutter_svg:
   open_file:
   path_provider:
-  pdf: 3.7.4
-  printing: 5.8.0
+  pdf:
+  printing:
   flutter_vector_icons:
   font_awesome_flutter:
   material_design_icons_flutter:
   google_fonts:
   flutter_staggered_grid_view:
-  hover_effect:
+  #hover_effect:
   animated_text_kit:
 
-  table_calendar: ^3.0.5
+  table_calendar:
 
 dev_dependencies:
   flutter_test:
